Login finalizado, se posicionaron los formularios de medicamentos

--- a/MedicAPP/frmListaMedicamentos.resx
+++ b/MedicAPP/frmListaMedicamentos.resx
@@ -148,4 +148,14 @@
         hDFzWo5nGjDINwZ89odD0LCE/irm/WX+MMZcAQA25tVURbmdAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btnAtras.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAO5JREFUSEvV
+        lr8OwXAURvsEDIJESYgJD+YxGQ02fwYsdMFL1Lly7+CXGuT2NnGSb+HL+ahqm/0FZVmOyJGsSVtfrhcd
+        uRBjQ1r6dj0gHJKz2BOWWvGDLCdVIwfS0ZoPRH0iv0nKiQy05gORjMinTpFvl2vNB6JvI1cy1poPRD1S
+        NXIjE635QCQje7EmFGSqNR+IZGQn1oQ7mWnNB6IuqRp5kLnW/CDbvrWfPMlCK/WAsLGhZg6dgDD+ZDAQ
+        xp/eBsL4P6yBMP4SZCCMv6gaCONvEwbC+BufgTD+Vm4gjX84MRDLmByyFYl53PqNLHsBaf+OG4mQCGEA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
