--- a/MedicAPP/frmPresentacion.resx
+++ b/MedicAPP/frmPresentacion.resx
@@ -120,6 +120,9 @@
   <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -155,6 +158,16 @@
         hmd4koxrlceDZmt4VLxjzJwr5iAasJ8GPJBtAA5V0F/F0AOMBzCX2lu5ZjEoFPAC/VWMbbSPA5ogH8se
         hWsagmQLOy2fgj0zuJULuFG8gnyCDrbafodJFrV8m74BL70iwjiqhaZfEUFh8CMTxsql9qY/ch84dLum
         hDFzWo5nGjDINwZ89odD0LCE/irm/WX+MMZcAQA25tVURbmdAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnAtras.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAO5JREFUSEvV
+        lr8OwXAURvsEDIJESYgJD+YxGQ02fwYsdMFL1Lly7+CXGuT2NnGSb+HL+ahqm/0FZVmOyJGsSVtfrhcd
+        uRBjQ1r6dj0gHJKz2BOWWvGDLCdVIwfS0ZoPRH0iv0nKiQy05gORjMinTpFvl2vNB6JvI1cy1poPRD1S
+        NXIjE635QCQje7EmFGSqNR+IZGQn1oQ7mWnNB6IuqRp5kLnW/CDbvrWfPMlCK/WAsLGhZg6dgDD+ZDAQ
+        xp/eBsL4P6yBMP4SZCCMv6gaCONvEwbC+BufgTD+Vm4gjX84MRDLmByyFYl53PqNLHsBaf+OG4mQCGEA
+        AAAASUVORK5CYII=
 </value>
   </data>
 </root>
