--- a/MedicAPP/frmLaboratorio.resx
+++ b/MedicAPP/frmLaboratorio.resx
@@ -157,4 +157,17 @@
   <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="btnAtras.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAO5JREFUSEvV
+        lr8OwXAURvsEDIJESYgJD+YxGQ02fwYsdMFL1Lly7+CXGuT2NnGSb+HL+ahqm/0FZVmOyJGsSVtfrhcd
+        uRBjQ1r6dj0gHJKz2BOWWvGDLCdVIwfS0ZoPRH0iv0nKiQy05gORjMinTpFvl2vNB6JvI1cy1poPRD1S
+        NXIjE635QCQje7EmFGSqNR+IZGQn1oQ7mWnNB6IuqRp5kLnW/CDbvrWfPMlCK/WAsLGhZg6dgDD+ZDAQ
+        xp/eBsL4P6yBMP4SZCCMv6gaCONvEwbC+BufgTD+Vm4gjX84MRDLmByyFYl53PqNLHsBaf+OG4mQCGEA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
