MOdificacion de formulario de Medicamentos para tener todo el crud en un mismo formulario

--- a/MedicAPP/frmListaMedicamentos.resx
+++ b/MedicAPP/frmListaMedicamentos.resx
@@ -129,17 +129,20 @@
   <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANdJREFUSEvt
-        lUEKwjAQRXMFWwuFIgVx48aN4NKdFxDc9VAuvG/8P/xoiLEVG0WwDx5MZpIZ2gZq/gdr7RwuZal0HtCw
-        hmd4koxrlceDZmt4VLxjzJwr5iAasJ8GPJBtAA5V0F/F0AOMBzCX2lu5ZjEoFPAC/VWMbbSPA5ogH8se
-        hWsagmQLOy2fgj0zuJULuFG8gnyCDrbafodJFrV8m74BL70iwjiqhaZfEUFh8CMTxsql9qY/ch84dLum
-        hDFzWo5nGjDINwZ89odD0LCE/irm/WX+MMZcAQA25tVURbmdAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnRegresar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnGuardar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANdJREFUSEvt
         lUEKwjAQRXMFWwuFIgVx48aN4NKdFxDc9VAuvG/8P/xoiLEVG0WwDx5MZpIZ2gZq/gdr7RwuZal0HtCw
@@ -156,6 +159,17 @@
         NXIjE635QCQje7EmFGSqNR+IZGQn1oQ7mWnNB6IuqRp5kLnW/CDbvrWfPMlCK/WAsLGhZg6dgDD+ZDAQ
         xp/eBsL4P6yBMP4SZCCMv6gaCONvEwbC+BufgTD+Vm4gjX84MRDLmByyFYl53PqNLHsBaf+OG4mQCGEA
         AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAATtJREFUSEvd
+        ls1qwkAUhQXdVVd1Wde6EdFFbUHoM/qz8g0UwffIcygFaUsjKC1dxHMmNxDl3kkgSRd+8BFmcmdOMjOB
+        1KIoCmBVBAyolPsO+IEzOIYP4gucw1+YCytgBwc1A9wbwj0Ls9AC+ORuclw7cAOP4hZ25d4IZr6JFjBN
+        Tf7peq75gh2pWbgeD1rAswzmk1uspYZ74kULaMpgLolFKDWtuGmjBbRyBHxLTTtu2mgBYxnMDbVYSc0k
+        btpoAXMZ3IXc0Fs+4JPULF2PBy2AR28oE/AkrWEormAyeQPye/GiBRB+RC5EA/fqcu3DAzSxAgjfhOf8
+        FTbhI+Sac1n45P08Ib6ALDhpEtKD7+y8pUgAyQwpGkDSIVyuMzsTygggLgS+wT92JJQVQE7wanJSZoDK
+        vwRU+NsSBReP4kaMI56MXgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
