--- a/MedicAPP/frmExamenes.resx
+++ b/MedicAPP/frmExamenes.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -135,14 +138,6 @@
         EA79ACseE+e43gAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIFJREFUSEvV
-        kG0KgCAUBL3/sYrO1YcOL+MlBq5K88vZHrtQeGMHtArnn+9/NnDmW/qcIIvk7xKV+9UVXEc5xEU4M4iN
-        akErQwbW9OzC8vhvUQRQd/fh4wZQmcsLUXMfNELdxAFU5vJC1NwHjVA3cQCVubwQNfdBI9RNGFBDfc+B
-        EA79ACseE+e43gAAAABJRU5ErkJggg==
-</value>
-  </data>
   <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAATtJREFUSEvd
@@ -152,6 +147,45 @@
         btpoAXMZ3IXc0Fs+4JPULF2PBy2AR28oE/AkrWEormAyeQPye/GiBRB+RC5EA/fqcu3DAzSxAgjfhOf8
         FTbhI+Sac1n45P08Ib6ALDhpEtKD7+y8pUgAyQwpGkDSIVyuMzsTygggLgS+wT92JJQVQE7wanJSZoDK
         vwRU+NsSBReP4kaMI56MXgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="btnAgregar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANdJREFUSEvt
+        lUEKwjAQRXMFWwuFIgVx48aN4NKdFxDc9VAuvG/8P/xoiLEVG0WwDx5MZpIZ2gZq/gdr7RwuZal0HtCw
+        hmd4koxrlceDZmt4VLxjzJwr5iAasJ8GPJBtAA5V0F/F0AOMBzCX2lu5ZjEoFPAC/VWMbbSPA5ogH8se
+        hWsagmQLOy2fgj0zuJULuFG8gnyCDrbafodJFrV8m74BL70iwjiqhaZfEUFh8CMTxsql9qY/ch84dLum
+        hDFzWo5nGjDINwZ89odD0LCE/irm/WX+MMZcAQA25tVURbmdAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANdJREFUSEvt
+        lUEKwjAQRXMFWwuFIgVx48aN4NKdFxDc9VAuvG/8P/xoiLEVG0WwDx5MZpIZ2gZq/gdr7RwuZal0HtCw
+        hmd4koxrlceDZmt4VLxjzJwr5iAasJ8GPJBtAA5V0F/F0AOMBzCX2lu5ZjEoFPAC/VWMbbSPA5ogH8se
+        hWsagmQLOy2fgj0zuJULuFG8gnyCDrbafodJFrV8m74BL70iwjiqhaZfEUFh8CMTxsql9qY/ch84dLum
+        hDFzWo5nGjDINwZ89odD0LCE/irm/WX+MMZcAQA25tVURbmdAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANdJREFUSEvt
+        lUEKwjAQRXMFWwuFIgVx48aN4NKdFxDc9VAuvG/8P/xoiLEVG0WwDx5MZpIZ2gZq/gdr7RwuZal0HtCw
+        hmd4koxrlceDZmt4VLxjzJwr5iAasJ8GPJBtAA5V0F/F0AOMBzCX2lu5ZjEoFPAC/VWMbbSPA5ogH8se
+        hWsagmQLOy2fgj0zuJULuFG8gnyCDrbafodJFrV8m74BL70iwjiqhaZfEUFh8CMTxsql9qY/ch84dLum
+        hDFzWo5nGjDINwZ89odD0LCE/irm/WX+MMZcAQA25tVURbmdAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
